<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="picture"
                    android:src="@drawable/test" />

                <TextView
                    android:id="@+id/heading1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntul"
                    android:layout_below="@id/img1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/heading1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subheading1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/heading1"
                    android:fontFamily="@font/ubuntul"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/subheading1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/para1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subheading1"
                    android:fontFamily="@font/ubuntul"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/para1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/para1"
                    android:contentDescription="picture2"
                    android:src="@drawable/saviours" />


                <Button
                    android:id="@+id/startTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntul"
                    android:layout_below="@id/img2"
                    android:layout_margin="16dp"
                    android:background="@color/Buttoncol"
                    android:text="@string/start_test"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>